--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,70 +1,28 @@
-$light: white;
-$lightBlue: #e2edff;
-$darkBlue: #015fff;
-$red: #fa453c;
-$green: #23cc0e;
-
-$xsWidth: 0;
-$smWidth: 576px;
-$mdWidth: 768px;
-$lgWidth: 992px;
-$xlWidth: 1200px;
-
-$xxsGap: 5px;
-$xsGap: 10px;
-$smGap: 15px;
-$mdGap: 20px;
-$lgGap: 50px;
-$xlGap: 100px;
-
-$baseText: 20px;
-$xsText: 10px;
-$smText: 15px;
-$mdText: 35px;
-$lgText: 49px;
-
-@mixin xs {
-	@media (min-width: #{$xsWidth}) {
-		@content;
-	}
-}
-
-@mixin sm {
-	@media (max-width: #{$smWidth}) {
-		@content;
-	}
-}
-
-@mixin md {
-	@media (max-width: #{$mdWidth}) {
-		@content;
-	}
-}
-
-@mixin lg {
-	@media (max-width: #{$lgWidth}) {
-		@content;
-	}
-}
-
-@mixin underline($color, $bg) {
-	text-shadow: 1px 1px $bg, -1px 1px $bg, -1px -1px $bg, 1px -1px $bg;
-  background-image: linear-gradient(90deg, $color 100%, transparent 100%);
-  background-position: bottom;
-  background-repeat: no-repeat;
-  background-size: 100% 1px;
-}
-
-@mixin nounderline() {
-	text-shadow: none;
-  background-image: none;
-}
+@import 'vars';
 
 html, body {
+	font-family: 'GT Walsheim';
 	font-size: $baseText;
 	font-weight: normal;
 	line-height: 1.3em;
 	color: black;
+	min-height: 200%;
+	@include sm {
+		content: 'sm';
+	}
+	@include md {
+		content: 'md';
+	}
+	@include lg {
+		content: 'lg';
+	}
+}
+body {
+
+}
+* {
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
 }
 h1, h2, h3, h4, h5 {
 	font-weight: normal;
@@ -100,13 +58,13 @@ h5 {
 }
 a {
 	text-decoration: none;
-  display: inline;
-  font-weight: normal;
-  color: black;
-  @include underline(black, transparent);
-  &:hover {
-  	text-decoration: none;
-  }
+	display: inline;
+	font-weight: normal;
+	color: black;
+	@include underline(black, transparent);
+	&:hover {
+		text-decoration: none;
+	}
 }
 p {
 	margin: 0 0 $lgGap 0;
@@ -138,6 +96,9 @@ header {
 	z-index: 100;
 	position: relative;
 	z-index: 100;
+	@include lg {
+		padding: $mdGap 0;
+	}
 	@include md {
 		padding: $xsGap 0;
 	}
@@ -155,6 +116,17 @@ header {
 	}
 	.col-logo {
 		width: 100%;
+		padding: 0 #{$xlGap - $smGap};
+		@include lg {
+			padding: 0 #{$mdGap - $smGap};
+		}
+		@include md {
+			padding: 0 #{$smGap - $xsGap};
+			.container {
+				margin: 0;
+				padding: 0;
+			}
+		}
 		svg {
 			width: 100%;
 			height: auto;
@@ -163,34 +135,38 @@ header {
 	}
 	.col-nav {
 		display: none !important;
+		padding: 0;
 		@include md {
-		  display: block !important;
-		  opacity: 0;
+			display: block !important;
+			opacity: 0;
 		}
 		nav {
 			height: 100%;
+			padding: 0 #{$xlGap - $smGap};
+			@include lg {
+				padding: 0 #{$mdGap - $smGap};
+			}
+			@include md {
+				padding: 0 #{$smGap - $xsGap};
+			}
+			a {
+				@include nounderline;
+			}
 			.col {
-				text-align: center;
 				padding-right: 0;
+				display: flex;
+				align-content: center;
+				font-size: $smText;
 				a {
 					@include nounderline();
 				}
-				&:first-of-type {
-					padding: 0;
-				}
-				&:nth-of-type(2) {
-					padding: 0 $xxsGap;
-				}
-				&:last-of-type {
-					padding: 0;
-				}
 				@include md {
-					text-align: left;
+					margin: 0;
+					padding: 0;
 				}
 			}
 			form {
 				display: table;
-				margin: auto;
 				position: relative;
 				input {
 					width: calc(100% - 1.5em);
@@ -198,10 +174,7 @@ header {
 					border: solid black;
 					border-width: 0 0 1px 0;
 					padding: 0;
-					position: absolute;
-					left: 0;
-					top: 0;
-					z-index: 100;
+					font-size: $smText;
 				}
 				svg {
 					width: 1em;
@@ -224,7 +197,9 @@ header {
 			}
 			@include sm {
 				width: 100%;
-				font-size: $smText;
+				* {
+					font-size: $smText !important;
+				}
 			}
 		}
 	}
@@ -244,8 +219,27 @@ header {
 	}
 }
 main {
+	position: relative;
+	.wall {
+		position: absolute;
+		width: 100%;
+		height: 100%;
+		position: absolute;
+		left: 0;
+		top: 0;
+		z-index: 100;
+	}
 	width: 100%;
-	.row .col .inner_content p {
+	&.fixed {
+		.main-row {
+			position: fixed;
+			left: 0;
+		}
+		.wall {
+			display: none;
+		}
+	}
+	.row .col .inner-content p {
 		&:nth-child(3n+1) a {
 			@include underline($darkBlue, inherit);
 			&:hover {
@@ -273,7 +267,7 @@ main {
 				padding: 0;
 				display: block;
 			}
-			.inner_content {
+			.inner-content {
 				padding: $xlGap #{$xlGap - $smGap};
 				@include lg {
 					padding: $mdGap #{$mdGap - $smGap};
@@ -306,9 +300,13 @@ main {
 					}
 				}
 			}
+			&.left, &.right {
+				height: 100%;
+				overflow: auto;
+			}
 			&.left {
 				background: $lightBlue;
-				.inner_content {
+				.inner-content {
 					strong {
 						text-transform: uppercase;
 						color: black;
@@ -324,7 +322,7 @@ main {
 			&.right {
 				background: $darkBlue;
 				color: $light;
-				.inner_content {
+				.inner-content {
 					a {
 						display: inline;
 						color: $light;
@@ -348,6 +346,9 @@ main {
 			background-color: black;
 			color: $light;
 			padding: $mdGap;
+			a {
+				color: $light;
+			}
 			.social {
 				h4 {
 					position: relative;
