--- a/style.css
+++ b/style.css
@@ -27,7 +27,9 @@ html, body {
   font-weight: normal;
   line-height: 1.3em;
   color: black;
-  min-height: 200%; }
+  min-height: 200%;
+  overflow-x: hidden;
+  -webkit-overflow-scrolling: touch; }
   @media (max-width: 992px) {
     html, body {
       content: 'lg'; } }
@@ -56,11 +58,11 @@ h1 {
       line-height: 1.3em; } }
   @media (max-width: 576px) {
     h1 {
-      font-size: 15px;
+      font-size: 20px;
       line-height: 1.3em; } }
 
 h2 {
-  font-size: 35px;
+  font-size: 20px;
   line-height: 1.3em; }
   @media (max-width: 768px) {
     h2 {
@@ -136,10 +138,13 @@ header {
   z-index: 100; }
   @media (max-width: 992px) {
     header {
-      padding: 20px 0; } }
+      padding: 30px 0; } }
   @media (max-width: 768px) {
     header {
-      padding: 10px 0; } }
+      padding: 20px 0; } }
+  header .row {
+    -webkit-box-align: center;
+            align-items: center; }
   header .container-fluid {
     padding: 0; }
   header .col-logo, header .col-nav {
@@ -157,6 +162,7 @@ header {
     width: 100%;
     height: auto;
     display: table;
+    position: relative;
     overflow: visible !important; }
   header .col-nav {
     display: none !important;
@@ -164,8 +170,7 @@ header {
     @media (max-width: 576px) {
       header .col-nav {
         display: block !important;
-        padding-right: 15px;
-        padding-left: 15px; } }
+        padding: 15px 15px 0 15px; } }
     header .col-nav .container {
       height: 100%;
       padding: 0 60px; }
@@ -198,6 +203,7 @@ header {
         background: white;
         border: solid black;
         border-width: 0 0 1px 0;
+        border-radius: 0;
         padding: 0;
         font-size: 15px;
         line-height: 1.3em; }
@@ -237,21 +243,23 @@ header {
             flex: 0 0 auto; }
 
 main {
-  position: relative;
-  width: 100%; }
+  width: 100%;
+  position: relative; }
   main .wall {
-    position: absolute;
     width: 100%;
     height: 100%;
     position: absolute;
     left: 0;
     top: 0;
     z-index: 100; }
+    @media (max-width: 576px) {
+      main .wall {
+        display: none; } }
   main.fixed .main-row {
     position: fixed;
     left: 0; }
     main.fixed .main-row .col.left, main.fixed .main-row .col.right {
-      height: auto; }
+      height: 100vh; }
   main.fixed .wall {
     display: none; }
   main .row .col .inner-content p:nth-child(3n+1) a {
@@ -309,14 +317,19 @@ main {
           color: #23cc0e; }
       @media (max-width: 768px) {
         main .row .col .inner-content .col-12 {
-          margin-bottom: 50px; }
+          margin-bottom: 20px; }
         main .row .col .inner-content .cell {
           margin-bottom: 10px; }
           main .row .col .inner-content .cell h3 {
             margin-bottom: 0 !important; } }
     main .row .col.left, main .row .col.right {
       height: 100vh;
-      overflow: auto; }
+      overflow-y: auto;
+      -webkit-overflow-scrolling: touch; }
+      @media (max-width: 576px) {
+        main .row .col.left, main .row .col.right {
+          height: auto;
+          overflow: hidden; } }
     main .row .col.left {
       background: #e2edff; }
       main .row .col.left .inner-content strong {
@@ -359,7 +372,7 @@ main {
     padding: 20px; }
     main .row footer a {
       color: white; }
-    main .row footer .credits {
+    main .row footer .credits.not-sm {
       margin-top: 15px; }
     main .row footer .social h4 {
       position: relative; }
@@ -371,6 +384,15 @@ main {
     @media (max-width: 768px) {
       main .row footer .col-12:not(:last-of-type) {
         margin-bottom: 20px; } }
+
+.only-sm {
+  display: none; }
+
+@media (max-width: 576px) {
+  .not-sm {
+    display: none; }
+  .only-sm {
+    display: block; } }
 
 body::before {
   display: none; }
